--- a/index.html
+++ b/index.html
@@ -50,13 +50,25 @@
             </p>
             <br>
 
-            <div class="galeria">
-                <img src="imagen1.jpg">
-                <img src="imagen2.jpg">
-                <img src="imagen1.jpg">
-                <img src="imagen2.jpg">
-                <img src="imagen1.jpg">
-                <img src="imagen2.jpg">
+            <div class="grid-gallery">
+                <a class="grid-item" href="#">
+                    <img src="imagen1.jpg">
+                </a>
+                <a class="grid-item" href="#">
+                    <img src="imagen2.jpg">
+                </a>
+                <a class="grid-item" href="#">
+                    <img src="imagen1.jpg">
+                </a>
+                <a class="grid-item" href="#">
+                    <img src="imagen2.jpg">
+                </a>
+                <a class="grid-item" href="#">
+                    <img src="imagen1.jpg">
+                </a>
+                <a class="grid-item" href="#">
+                    <img src="imagen2.jpg">
+                </a>
             </div>
 
         </section>
