--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
 
             <div class="grid-gallery">
                 <a class="grid-item" href="#">
-                    <img src="imagen1.jpg">
+                    <img class="grid-image" src="imagen1.jpg">
                 </a>
                 <a class="grid-item" href="#">
-                    <img src="imagen2.jpg">
+                    <img class="grid-image" src="imagen2.jpg">
                 </a>
                 <a class="grid-item" href="#">
-                    <img src="imagen1.jpg">
+                    <img class="grid-image" src="imagen1.jpg">
                 </a>
                 <a class="grid-item" href="#">
-                    <img src="imagen2.jpg">
+                    <img class="grid-image" src="imagen2.jpg">
                 </a>
                 <a class="grid-item" href="#">
-                    <img src="imagen1.jpg">
+                    <img class="grid-image" src="imagen1.jpg">
                 </a>
                 <a class="grid-item" href="#">
-                    <img src="imagen2.jpg">
+                    <img class="grid-image" src="imagen2.jpg">
                 </a>
             </div>
 
