--- a/index.html
+++ b/index.html
@@ -50,25 +50,13 @@
             </p>
             <br>
 
-            <div class="grid-gallery">
-                <a class="grid-item" href="#">
-                    <img class="grid-image" src="imagen1.jpg">
-                </a>
-                <a class="grid-item" href="#">
-                    <img class="grid-image" src="imagen2.jpg">
-                </a>
-                <a class="grid-item" href="#">
-                    <img class="grid-image" src="imagen1.jpg">
-                </a>
-                <a class="grid-item" href="#">
-                    <img class="grid-image" src="imagen2.jpg">
-                </a>
-                <a class="grid-item" href="#">
-                    <img class="grid-image" src="imagen1.jpg">
-                </a>
-                <a class="grid-item" href="#">
-                    <img class="grid-image" src="imagen2.jpg">
-                </a>
+            <div class="galeria">
+                <img src="imagen1.jpg">
+                <img src="imagen2.jpg">
+                <img src="imagen1.jpg">
+                <img src="imagen2.jpg">
+                <img src="imagen1.jpg">
+                <img src="imagen2.jpg">
             </div>
 
         </section>
