--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <input type="text">
                     <label for="usuario">Contraseña:</label>
                     <input type="password">
+                    <input type+"submit">
                 </fieldset>
             </form>
 
