--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <input type="text">
                     <label for="usuario">Contraseña:</label>
                     <input type="password">
-                    <input type+"submit">
+                    <input type="submit" value="Entrar">
                 </fieldset>
             </form>
 
@@ -151,6 +151,7 @@
                     <P><strong>GRID</strong></P>
                 <br>
                 <a href="grid/index.html" target="_blank">Plantilla</a>
+                <br>
                 <br>
                 <br>
                 </div>
