--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                     <input type="text">
                     <label for="usuario">Contraseña:</label>
                     <input type="password">
-                    <input type="submit" value="Entrar">
+                    <center>
+                    <input type="submit" value="Entrar" style="width: 50px;">
+                    </center>
                 </fieldset>
             </form>
 
